logs/go_to_poi/build.make.023.log.stderr
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp: In function ‘void poi_array_sub(const ConstPtr&)’:
/home/hyun1270/competition_ws/woohyun_ws/src/go_to_poi/src/go_to_poi.cpp:53:28: error: ‘i’ was not declared in this scope
          << waypoint_index[i] << endl;
                            ^
make[2]: *** [CMakeFiles/go_to_poi.dir/src/go_to_poi.cpp.o] Error 1
make[1]: *** [CMakeFiles/go_to_poi.dir/all] Error 2
make: *** [all] Error 2
